--- a/package.json
+++ b/package.json
@@ -6,30 +6,33 @@
   "description": "Memento: how to use Svelte with Electron",
   "author": "Samuele de Tomasi <samuele@stranianelli.com>",
   "license": "MIT",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "start": "electron .",
     "build-installer": "rollup -c && electron-builder build --win --publish never",
-    "publish": "electron-builder build --win --publish always"
+    "publish": "electron-builder build --win --publish always",
+    "check-updates": "npx npm-check-updates",
+    "check-updates:minor": "npx npm-check-updates --target minor",
+    "check-updates:patch": "npx npm-check-updates --target patch"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^17.0.0",
-    "@rollup/plugin-node-resolve": "^11.0.0",
-    "electron": "^15.5.5",
-    "electron-builder": "^22.10.5",
-    "rollup": "^2.3.4",
+    "@rollup/plugin-commonjs": "^22.0.0",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "electron": "^19.0.4",
+    "electron-builder": "^23.0.3",
+    "rollup": "^2.75.6",
     "rollup-plugin-css-only": "^3.1.0",
-    "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-svelte": "^7.0.0",
-    "rollup-plugin-terser": "^7.0.0",
-    "svelte": "^3.0.0"
+    "rollup-plugin-livereload": "^2.0.5",
+    "rollup-plugin-svelte": "^7.1.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "svelte": "^3.48.0"
   },
   "dependencies": {
     "electron-reload": "^1.5.0",
-    "electron-updater": "^4.3.9",
-    "sirv-cli": "^1.0.0"
+    "electron-updater": "^5.0.1",
+    "sirv-cli": "^2.0.2"
   },
   "build": {
     "appId": "memento",
